[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "Email Triage OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "openai>=2.7.2",
]

[project.scripts]
server = "server.app:main"
